# GasSourceLocalization

./: .astylerc  .clang-format  .clangd  .gitignore  .gitmodules  README.md  generate_occupancies.sh
Environment_config/GrGSL_RA-L_2021/: CMakeLists.txt  gaden.rviz  package.xml
Environment_config/GrGSL_RA-L_2021/Exp_A/launch/: GADEN.launch  GADEN_preprocessing.launch  main_simbot.launch  main_simbot.py  main_simbot.xml
Environment_config/GrGSL_RA-L_2021/Exp_A/launch/ros/: simbot_costmap_local_params.yaml  simbot_local_planner_params.yaml  simbot_move_base.launch  stage.world
Environment_config/GrGSL_RA-L_2021/Exp_B/launch/: GADEN.launch  GADEN_preprocessing.launch  main_simbot.launch  main_simbot.py
Environment_config/GrGSL_RA-L_2021/Exp_B/launch/ros/: simbot_move_base.launch  stage.world
Environment_config/GrGSL_RA-L_2021/Exp_C/: OccupancyGrid3D.csv  occupancy.pgm
Environment_config/GrGSL_RA-L_2021/Exp_C/launch/: GADEN.launch  GADEN_player.launch  GADEN_preprocessing.launch  main_simbot.launch  main_simbot.py
Environment_config/GrGSL_RA-L_2021/Exp_C/launch/ros/: simbot_move_base.launch  stage.world
Environment_config/GrGSL_RA-L_2021/Exp_D/launch/: GADEN.launch  GADEN_preprocessing.launch  main_simbot.launch  main_simbot.py
Environment_config/GrGSL_RA-L_2021/Exp_D/launch/ros/: gaden.rviz  simbot_local_planner_params.yaml  simbot_move_base.launch  stage.world
Environment_config/GrGSL_RA-L_2021/navigation_config/: conditional_coppelia_launch.py  nav2_launch.py
gsl_actions/: CMakeLists.txt  package.xml
gsl_actions/action/: DoGSL.action  gsl_action_msg.action
gsl_actionserver/: CMakeLists.txt  imgui.ini  package.xml
gsl_actionserver/Utils/NQA/: NQAQuadtree.cpp  NQAQuadtree.h
gsl_actionserver/Utils/Quadtree/: NQAQuadtree.cpp
gsl_actionserver/Utils/Utils/: Time.h  Utils.cpp  Utils.h  Vector2.h  Vector2Int.h  Vector3.h
gsl_actionserver/action/: gsl_action_msg.action
gsl_actionserver/include/: gsl_algorithm.h  gsl_grid.h  gsl_implot.h  gsl_particle_filter.h  gsl_plume_tracking.h  gsl_server.h  gsl_spiral.h  gsl_surge_cast.h  gsl_surge_spiral.h
gsl_actionserver/include/algorithms/: gsl_algorithm.h  gsl_grid.h  gsl_particle_filter.h  gsl_plume_tracking.h  gsl_spiral.h  gsl_surge_cast.h  gsl_surge_spiral.h
gsl_actionserver/include/algorithms/PMFS/: PMFS.h  pmfs_UI.h  pmfs_helper_classes.h  pmfs_publishers_and_subscribers.h  pmfs_simulations.h
gsl_actionserver/src/: gsl_algorithm.cpp  gsl_grid.cpp  gsl_imgui.cpp  gsl_particle_filter.cpp  gsl_plume_tracking.cpp  gsl_server.cpp  gsl_server_call.cpp  gsl_spiral.cpp  gsl_surge_cast.cpp  gsl_surge_spiral.cpp
gsl_actionserver/src/algorithms/: gsl_algorithm.cpp  gsl_grid.cpp  gsl_particle_filter.cpp  gsl_plume_tracking.cpp  gsl_spiral.cpp  gsl_surge_cast.cpp  gsl_surge_spiral.cpp
gsl_actionserver/src/algorithms/PMFS/: pmfs_UI.cpp  pmfs_simulations.cpp
gsl_actionserver/src/algorithms/PMFS/PMFS_GSL/: pmfs_callbacks.cpp  pmfs_core.cpp  pmfs_initialization.cpp  pmfs_movement.cpp  pmfs_utils.cpp  pmfs_visualization.cpp
gsl_server/: CMakeLists.txt  package.xml
gsl_server/CMake/: CommonDependencies.cmake  HandleConditionals.cmake
gsl_server/Utils/NQA/: NQAQuadtree.cpp  NQAQuadtree.h
gsl_server/Utils/Utils/: Time.h  Utils.cpp  Utils.h  Vector2.h  Vector2Int.h  Vector3.h
gsl_server/include/: gsl_imgui.h  gsl_implot.h  gsl_macros.h  gsl_server.h
gsl_server/include/algorithms/: gsl_GrGSL.h  gsl_algorithm.h  gsl_particle_filter.h  gsl_plume_tracking.h  gsl_spiral.h  gsl_surge_cast.h  gsl_surge_spiral.h
gsl_server/include/algorithms/PMFS/: PMFS.h  pmfs_UI.h  pmfs_helper_classes.h  pmfs_publishers_and_subscribers.h  pmfs_settings.h  pmfs_simulations.h
gsl_server/include/gsl_server/: gsl_server.h  gsl_server.hpp
gsl_server/include/gsl_server/NQA/: NQAQuadtree.cpp  NQAQuadtree.h
gsl_server/include/gsl_server/Utils/: BufferWrapper.h  BufferWrapper.hpp  Collections.hpp  Color.hpp  Math.h  Math.hpp  NQAQuadtree.h  NQAQuadtree.hpp  Profiling.hpp  RosUtils.h  RosUtils.hpp  Time.h  Time.hpp  Utils.cpp  Utils.h
gsl_server/include/gsl_server/algorithms/: Algorithm.h  Algorithm.hpp
gsl_server/include/gsl_server/algorithms/Common/: GSLState.h  Grid.h  Grid.hpp  GridData.hpp  MovingState.h  MovingState.hpp  StopAndMeasureState.h  StopAndMeasureState.hpp  WaitForGasState.hpp  WaitForMapState.h  WaitForMapState.hpp
gsl_server/include/gsl_server/algorithms/GrGSL/: GrGSL.h  GrGSL.hpp  MovingStateGrGSL.hpp
gsl_server/include/gsl_server/algorithms/PMFS/: DebugCreateMapState.hpp  MovingStatePMFS.hpp  PMFS.hpp  PMFSLib.hpp  PMFSViz.hpp
gsl_server/include/gsl_server/algorithms/ParticleFilter/: ParticleFilter.h  ParticleFilter.hpp
gsl_server/include/gsl_server/algorithms/PlumeTracking/: MovingStatePlumeTracking.h  PlumeTracking.h  PlumeTracking.hpp
gsl_server/include/gsl_server/algorithms/Semantics/: AABB.hpp  ClassMap.hpp  (+5 more)
gsl_server/include/gsl_server/core/: ConditionalMacros.hpp  FunctionQueue.h  GSLResult.h  GSLResult.hpp  Logging.hpp  Macros.hpp  Navigation.hpp  Vectors.h  Vectors.hpp  VectorsHash.hpp  logging.h  logging.hpp  ros_typedefs.h
gsl_server/resources/: ObjectProbByRoom.yaml  SemanticPMFS_imgui.ini  imgui.ini  ontology.yaml
gsl_server/src/: gsl_imgui.cpp  gsl_server.cpp  gsl_server_call.cpp
gsl_server/src/algorithms/: Algorithm.cpp  gsl_GrGSL.cpp  gsl_algorithm.cpp  gsl_particle_filter.cpp  gsl_plume_tracking.cpp  gsl_spiral.cpp  gsl_surge_cast.cpp  gsl_surge_spiral.cpp
gsl_server/src/algorithms/Common/: StopAndMeasure.cpp  WaitForMapState.cpp
gsl_server/src/algorithms/PMFS/: pmfs_UI.cpp  pmfs_simulations.cpp
gsl_server/src/aux_nodes/: gsl_server_call.cpp  send_pose.cpp
gsl_server/src/gsl_server/: gsl_server.cpp  gsl_server.hpp
gsl_server/src/gsl_server/algorithms/: gsl_algorithms.hpp
gsl_server/src/gsl_server/core/: ConditionalMacros.hpp  FunctionQueue.hpp  Logging.hpp  Macros.hpp  Vectors.hpp  ros_typedefs.hpp
gsl_server/src/server/: gsl_server.cpp
gsl_server/src/server/Utils/: Math.cpp  NQAQuadtree.cpp  RosUtils.cpp
gsl_server/src/server/algorithms/: Algorithm.cpp
(+507 files in other folders)
