<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>gsl_server</name>
  <version>0.0.1</version>
  <description>Gas Source Localizaton ActionServer. It implements different search strategies: Surge-cast, Spiral, etc.</description>

  <maintainer email="ojedamorala@uma.es">Pepe Ojeda</maintainer>

  <license>GPLv3</license>

  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>olfaction_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_assistant_msgs</build_depend>
  <build_depend>gsl_actions</build_depend>
  
  <!-- Optionals -->
  <build_depend>gaden_player</build_depend>
  <build_depend>gmrf_msgs</build_depend>
  <build_depend>voxeland</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
